Mon Mar 31 12:36:58 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/wb26wrproject.txt:

          Added documentation for the template variables for the
          wb26wrproject template.

Fri Mar 28 15:30:00 UTC 2008  Simon Massey  <simon dot massey at prismtech dot com>

        * config/unicode.mpb:
        * config/global.features:
          Allow for the already built-in unicode feature support to be recognised.

Tue Mar 25 14:35:19 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          Added support for link_group

Tue Mar 25 11:43:40 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:

          Documented the new third and optional parameter to verbatim which
          allows the addition of verbatim sections instead of overwriting.

        * modules/ProjectCreator.pm:

          Require a parameter to verbatim to enable the verbatim addition
          feature.  Some existing ACE and TAO MPC files rely on the
          overwriting behavior of verbatim.

Mon Mar 24 17:10:23 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Changed 'verbatim' to add to existing verbatim settings instead of
          overwritting them.

Mon Mar 24 15:18:28 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/USAGE:

          Document the 'main_functions' configuration file setting.

        * modules/Driver.pm:
        * modules/ProjectCreator.pm:

          Support the ability to specify additional "main" functions to work
          with automatic executable project recognition.

Fri Mar 21 16:06:00 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/MakeWorkspaceBase.pm:

          Fixed the post_workspace() parameters.  The file handle (which is
          unused in the method) was not shifted.

        * modules/WorkspaceCreator.pm:

          Provide a mechanism for creating multiple output files per